src/screens/chart-notes/medical-intervention-rom-config-v2/MedicalInterventionRomConfigV2Screen.scss
.medical-intervention-rom-config-v2-screen {
  .body-part-rom-config-card-wrapper {
    .card-component {
      .card-body {
        padding: 0px !important;
      }
    }
    .body-part-rom-config-card {
      .card-header {
        .card-title {
          text-transform: capitalize !important;
        }
      }

      .rom-config-table-container {
        .t-table-wrapper {
          .t-table {
            min-height: max-content !important;
          }
        }
      }
    }
  }

  .movement-comment {
    word-break: break-word;

  }
}

